# Immagine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.lua  gen.bat  premake5.lua  travis.yml
gui/: CMakeLists.txt
gui/include/gui/: mainwindow.h
gui/resources/: resources.qrc
gui/src/gui/: main.cpp  mainwindow.cpp
gui/ui/: mainwindow.ui
immagine/: CMakeLists.txt  premake5.lua
immagine/include/Immagine/: Convolution.h  Disjoint_Set.h  Exports.h  Image.h  Imagedef.h  Kernel.h  Mask.h  Morphology.h  Point_Processing.h  Quadtree.h  Utilities.h  Utils.h
immagine/src/Immagine/: Convolution.cpp  Disjoint_Set.cpp  Image.cpp  Kernel.cpp  Mask.cpp  Morphology.cpp  Point_Processing.cpp  Quadtree.cpp
playground/: CMakeLists.txt  premake5.lua
playground/src/: playground.cpp
ui/: CMakeLists.txt
ui/include/immagine/ui/: Exports.h
ui/include/ui/: Exports.h
